Updated the copyright

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-Wordpress Metro UI Theme - www.wordpress-metro-theme.co.uk
+Wordpress Metro Theme - www.wordpress-metro-theme.co.uk
 
 
 LICENSE SUMMARY
 ---------------
-Wordpress Metro UI Theme
+Wordpress Metro Theme
 Copyright (C) 2012 Jon Wigham
 
 This program is free software: you can redistribute it and/or modify
