Updates to make the site pass validation for the directory

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-Wordpress Metro Theme - www.wordpress-metro-theme.co.uk
+WordPress Metro Theme - www.wordpress-metro-theme.co.uk
 
 
 LICENSE SUMMARY
 ---------------
-Wordpress Metro Theme
+WordPress Metro Theme
 Copyright (C) 2012 Jon Wigham
 
 This program is free software: you can redistribute it and/or modify
@@ -22,4 +22,4 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>
 
 REQUIREMENTS
 ------------
-Wordpress 3+
+WordPress 3+
